cli/tests/error_009_op_crates_error.js.out
[WILDCARD]error: Uncaught TypeError: Failed to construct 'Event': 1 argument, but only 0 present.
new Event();
^
    at [WILDCARD]
    at new Event (deno:op_crates/web/[WILDCARD])
    at [WILDCARD]
